--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "almanissoko",
+  "name": "almanis",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,13 +28,13 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.10.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
