--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "chart.js": "^4.4.1",
     "chartjs": "^0.3.24",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
