--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.3",
     "chartjs": "^0.3.24",
     "dotenv": "^16.3.1",
     "file-saver": "^2.0.5",
     "perfect-scrollbar": "^1.5.5",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-html-table-to-excel": "^2.0.0",
